# synapse

./: .dockerignore  .env.docker  .env.example  .gitignore  AGENTS.md  Agent.md  BEADS_REMOVAL_SDD_PLAN.md  BGE_M3_MODEL_CONFIGURED.md  CHANGELOG.md  CI_CD_VERIFICATION.md  CONTRIBUTING.md  DEPLOYMENT_PI5_MAC.md  DOCKERHUB_README.md  DOCKERHUB_SETUP.md  DOCKER_INSTALLATION.md  Dockerfile  Dockerfile.pi  E2E_AND_LOAD_TESTING_SUMMARY.md  FINAL_SESSION_SUMMARY.md  FIXES_APPLIED_AND_CURRENT_STATUS.md  GEMINI.md  INGESTION_COMPLETE.md  LICENSE  MAC_QUICK_START.md  MCP_DEPLOYMENT_COMPLETE.md  MCP_DEPLOYMENT_FINAL.md  MCP_FIXES_IMPLEMENTATION_GUIDE.md  MCP_SERVER_INTEGRATION_GUIDE.md  MCP_SERVER_QUICKREF.md  MCP_SERVER_TEST_COMPLETE.md  MEMORY_BANK_MIGRATION_PLAN.md  MEMORY_SYSTEM_QUICK_REFERENCE.md  MIGRATION_v2.0.md  Makefile  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_CONTEXTUAL_MEMORY_DESIGN.md  PHASE2_FINAL_SUMMARY.md  PHASE2_INTEGRATION_SUMMARY.md  PHASE3_DEPLOYMENT_COMPLETE.md  PHASE3_E2_AND_LOAD_TESTING_COMPLETE.md  (+63 more)
.beads/: issues.jsonl  last-touched  metadata.json
api/: main.py
configs/: llama_config.json  logging_config.json  metrics_config.json  models_config.json  rag_config.json  rag_config.json.old  synapse_dev.json  synapse_prod.json
core/: __init__.py  auto_learning_tracker.py  bulk_ingest.py  chroma_semantic_store.py  chroma_vectorstore.py  embedding.py  episode_extractor.py  ingest.py  logger.py  memory_formatter.py  memory_reader.py  memory_selector.py  memory_store.py  memory_writer.py  metrics_collector.py  metrics_thread.py  orchestrator.py  prompt_builder.py  retriever.py  semantic_store.py  universal_hook.py  vectorstore_base.py
data/: episodic.db  memory.db  memory_db_schema.sql  registry.db  test_memory.db
docs/: AGENTIC_RAG_COMPLETE_GUIDE.md  BGE-M3_COMPATIBILITY_ISSUE.md  CHROMADB_MIGRATION.md  CONTRIBUTING-DOCS.md  FIXES_APPLIED.md  FUMADOCS_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  MCP_DEPLOYMENT_SUMMARY.md  MCP_SERVER_COMPLETE.md  (+23 more)
(+548 files in other folders)
