[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse"
version = "1.2.0"
description = "Your Data Meets Intelligence"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kayis Rahman", email = "kaisbk1@gmail.com"}
]
requires-python = ">=3.8"
keywords = [
    "synapse", "neurons", "neural-network", "episodic", "symbolic",
    "rag", "retrieval-augmented-generation", "llm", "local-ai", "privacy",
    "memory-management", "knowledge-base", "semantic-search", "vector-database",
    "gitignore-aware", "incremental-ingestion"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Tools :: CLI",
    "Programming Language :: Tools :: Build System",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
# NEW: Unified CLI entry point (Phase 1)
synapse = "synapse.cli.main:main"

# LEGACY: Old entry points (keep for backward compatibility with deprecation warnings)
synapse-bulk-ingest = "scripts.bulk_ingest:main"
synapse-system-status = "scripts.rag_status:main"
synapse-mcp-server = "mcp_server.rag_server:main"

[project.urls]
Homepage = "https://synapse.dev"
Documentation = "https://github.com/kayis-rahman/synapse#readme"
Repository = "https://github.com/kayis-rahman/synapse"
"Bug Tracker" = "https://github.com/kayis-rahman/synapse/issues"
